force-app/main/default/objects/Gift_Expense_Log__c/Gift_Expense_Log__c.object-meta.xml
<CustomObject>
    <description>Log of Gifts &amp; Expenses (keep)

Gifts are defined as anything of value, such as items, goods, services, favours, access to information, free publicity in whatever form or any other benefit that may accrue to any person, but does not include:
     Official donations made on behalf of Standard Bank / CIB 
     Items, goods, services, information or money in whatever form provided or obtained from third parties in terms of an official contract with Standard Bank / CIB 
     Does not include internal staff incentives.

Entertainment/Event - To provide amusement or enjoyment or to show hospitality. Does not include internal staff incentives.

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <label>Gift / Expense Log</label>
    <nameField>
        <displayFormat>GEL-{00000}</displayFormat>
        <label>Gift / Expense Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift / Expense Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>