force-app/main/default/objects/Gift_Expense_Log__c/fields/Approval_Actual_Approver__c.field-meta.xml
<CustomField>
    <fullName>Approval_Actual_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approval Reporting Field - Populated via trigger during approval process; Not shown on Page

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <label>Approval Actual Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Gift_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>