force-app/main/default/objects/Gift_Expense_Log__c/fields/Approval_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Approval_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approval Reporting Field - Populated via trigger during approval process; Not shown on Page

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <label>Approval Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Gift_Expense_Logs_Initial_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>