force-app/main/default/objects/Gift_Expense_Log__c/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <description>The most recent comment that was recorded during the approval process is recorded here for enhanced reporting functionality.

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <label>Approval Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>