force-app/main/default/objects/Gift_Expense_Log__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>Approval Reporting Field - Populated via trigger during approval process; Not shown on Page 

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>