force-app/main/default/objects/Gift_Expense_Log__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the person responsible for approving the offer for a gift.

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Gift_Expense_Logs_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>