force-app/main/default/objects/Gift_Expense_Log__c/fields/Approver_s_Delegated_Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver_s_Delegated_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Delegated Approver of the Delegated Approver who was selected by the User 

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <label>Approver&apos;s Delegated Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Gift_Expense_Logs_Delegated_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>