force-app/main/default/objects/Gift_Expense_Log__c/fields/Bank_Contact_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact_Business_Unit__c</fullName>
    <description>Standard Bank Contact Business Unit

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <inlineHelpText>The Bank Contact Business Unit Area value as recorded on the User record related to the Bank Contact</inlineHelpText>
    <label>Bank Contact Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>