force-app/main/default/objects/Gift_Expense_Log__c/fields/Bank_Contact_CIB_Global_Area__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact_CIB_Global_Area__c</fullName>
    <description>Standard Bank Contact CIB Global Area

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <inlineHelpText>The CIB Global Area value as recorded on the User record related to the Bank Contact</inlineHelpText>
    <label>Bank Contact CIB Global Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>