force-app/main/default/objects/Gift_Expense_Log__c/fields/Bank_Contact_Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact_Cost_Centre__c</fullName>
    <description>Standard Bank Contact Cost Centre

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <label>Bank Contact Cost Centre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>