force-app/main/default/objects/Gift_Expense_Log__c/fields/Bank_Contact_Division__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact_Division__c</fullName>
    <description>Standard Bank Contact Division 

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <inlineHelpText>The Bank Contact Division value as recorded on the User record related to the Bank Contact</inlineHelpText>
    <label>Bank Contact Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>