force-app/main/default/objects/Gift_Expense_Log__c/fields/Bank_Contact_Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact_Employee_Number__c</fullName>
    <description>Standard Bank Contact Employee Number

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <label>Bank Contact Employee Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>