force-app/main/default/objects/Gift_Expense_Log__c/fields/Bank_Contact_FAIS_Representative__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact_FAIS_Representative__c</fullName>
    <description>Case 1051: Gift / Expense Logs : C Reinecke</description>
    <formula>TEXT(Bank_Contact_Name__r.FAIS_Representative__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Contact FAIS Representative</label>
    <type>Text</type>
</CustomField>