force-app/main/default/objects/Gift_Expense_Log__c/fields/Bank_Contact_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact_Job_Title__c</fullName>
    <description>Standard Bank Contact Name

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <formula>Bank_Contact_Name__r.Title</formula>
    <label>Bank Contact Job Title</label>
    <type>Text</type>
</CustomField>