force-app/main/default/objects/Gift_Expense_Log__c/fields/Bank_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Standard Bank Contact Name

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <inlineHelpText>Standard Bank Employee Giving/Receiving Gift or Event Invitation</inlineHelpText>
    <label>Bank Contact Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select records of type Bank Contact</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Bank Contact Record Type</value>
        </filterItems>
        <infoMessage>Please select a Standard Bank Employee as the gift / Expense log receiver / giver.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gift / Expense Logs</relationshipLabel>
    <relationshipName>Bank_Gifts_Expenses_Log</relationshipName>
    <type>Lookup</type>
</CustomField>