force-app/main/default/objects/Gift_Expense_Log__c/fields/Bank_Contact_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact_State_Province__c</fullName>
    <description>Standard Bank Contact State/Province

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <inlineHelpText>The Bank Contact State/Province value as recorded on the User record related to the Bank Contact</inlineHelpText>
    <label>Bank Contact State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>