force-app/main/default/objects/Gift_Expense_Log__c/fields/Bank_Contact_Team__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact_Team__c</fullName>
    <description>Standard Bank Contact Team

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <label>Bank Contact Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>