force-app/main/default/objects/Gift_Expense_Log__c/fields/Charity_Name__c.field-meta.xml
<CustomField>
    <fullName>Charity_Name__c</fullName>
    <description>Name of the Charity Organisation to which the gift will be donated. 

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <label>Charity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>