force-app/main/default/objects/Gift_Expense_Log__c/fields/Client_Contact_FAIS_Representative__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_FAIS_Representative__c</fullName>
    <description>Case 1051: Gift / Expense Logs : C Reinecke</description>
    <formula>Text( Client_Contact_Name__r.FAIS_Representative__c  )</formula>
    <label>Client Contact FAIS Representative</label>
    <type>Text</type>
</CustomField>