force-app/main/default/objects/Gift_Expense_Log__c/fields/Client_Contact_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Job_Title__c</fullName>
    <description>Client Contact Title

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <formula>Client_Contact_Name__r.Title</formula>
    <label>Client Contact Job Title</label>
    <type>Text</type>
</CustomField>