force-app/main/default/objects/Gift_Expense_Log__c/fields/Client_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client Contact Name 

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <inlineHelpText>Client Contact Giving/Receiving Gift or Event Invitation</inlineHelpText>
    <label>Client Contact Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select records of type Client Contact</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client Contact Record Type, CFX Contact</value>
        </filterItems>
        <infoMessage>Please select a Client Contact as the gift / Expense log receiver / giver.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gift / Expense Logs</relationshipLabel>
    <relationshipName>Client_Gifts_Events_Log</relationshipName>
    <type>Lookup</type>
</CustomField>