force-app/main/default/objects/Gift_Expense_Log__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <description>Client Name of Client Contact

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <formula>Client_Contact_Name__r.Account.Name</formula>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>