force-app/main/default/objects/Gift_Expense_Log__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date Received/Gave Gift or Entertainment 

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <inlineHelpText>Date Received/Gave Gift or Entertainment</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>