force-app/main/default/objects/Gift_Expense_Log__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the Gift/Event

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <inlineHelpText>Short Description of Gift/Expense</inlineHelpText>
    <label>Description</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>