force-app/main/default/objects/Gift_Expense_Log__c/fields/Financial_Service_Provider_Client__c.field-meta.xml
<CustomField>
    <fullName>Financial_Service_Provider_Client__c</fullName>
    <description>Indicator on the Client that specifies if they as a regular feature of their business either furnishes advice and/or renders an intermediary service.

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <formula>TEXT(Client_Contact_Name__r.Account.Financial_Service_Provider__c)</formula>
    <inlineHelpText>Financial Services Provider</inlineHelpText>
    <label>Financial Service Provider Client</label>
    <type>Text</type>
</CustomField>