force-app/main/default/objects/Gift_Expense_Log__c/fields/Gift_Expense_Paid_for_By__c.field-meta.xml
<CustomField>
    <fullName>Gift_Expense_Paid_for_By__c</fullName>
    <description>Case 1051: Gift / Expense Logs : C Reinecke</description>
    <inlineHelpText>Cost</inlineHelpText>
    <label>Gift / Expense Paid for By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Standard Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>