force-app/main/default/objects/Gift_Expense_Log__c/fields/Gift_Expense_Reason__c.field-meta.xml
<CustomField>
    <fullName>Gift_Expense_Reason__c</fullName>
    <description>Reason for Offering/Receiving the Gift or Event Invitation

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <inlineHelpText>Reason for Offering/Receiving Gift or Event Invitation</inlineHelpText>
    <label>Gift / Expense Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Achieving a Milestone</fullName>
            </value>
            <value>
                <fullName>Birthday Gift</fullName>
            </value>
            <value>
                <fullName>Christmas Gift</fullName>
            </value>
            <value>
                <fullName>Competition Winner</fullName>
            </value>
            <value>
                <fullName>Cultural Practice</fullName>
            </value>
            <value>
                <fullName>Easter Gift</fullName>
            </value>
            <value>
                <fullName>Farewell Gift</fullName>
            </value>
            <value>
                <fullName>Get Well Soon</fullName>
            </value>
            <value>
                <fullName>Golf Day</fullName>
            </value>
            <value>
                <fullName>Holiday Tours</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>Marketing Opportunity</fullName>
            </value>
            <value>
                <fullName>New Business Exploration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Relationship Building</fullName>
            </value>
            <value>
                <fullName>Secretaries Day</fullName>
            </value>
            <value>
                <fullName>Service Excellence</fullName>
            </value>
            <value>
                <fullName>Teamwork</fullName>
            </value>
            <value>
                <fullName>Valentine&apos;s Day</fullName>
            </value>
            <value>
                <fullName>Wedding Gift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>