force-app/main/default/objects/Gift_Expense_Log__c/fields/Gift_Expense_Value__c.field-meta.xml
<CustomField>
    <fullName>Gift_Expense_Value__c</fullName>
    <description>Monetary Value of Gift/Expense

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <inlineHelpText>Monetary Value of Gift/Expense</inlineHelpText>
    <label>Gift / Expense Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>