force-app/main/default/objects/Gift_Expense_Log__c/fields/Rejection_Action__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Action__c</fullName>
    <description>Action to be taken if the offered gift is rejected.

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <label>Rejection Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Declined to Attend Event</fullName>
            </value>
            <value>
                <fullName>Gift Donated to Charity</fullName>
            </value>
            <value>
                <fullName>Gift Returned to Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>