force-app/main/default/objects/Gift_Expense_Log__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Case 1051: Gift / Expense Logs : C Reinecke</description>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exceeds Value Amount Permitted</fullName>
            </value>
            <value>
                <fullName>Perceived Conflict of Interest</fullName>
            </value>
            <value>
                <fullName>Reputational Concern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>