force-app/main/default/objects/Gift_Expense_Log__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <description>User who is submitting the Gift/Event Request

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
    <inlineHelpText>User who is submitting the Gift/Event Request</inlineHelpText>
    <label>Submitted By</label>
    <type>Text</type>
</CustomField>