force-app/main/default/objects/Gift_Expense_Log__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>Date Received/Gave Gift or Entertainment 

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <formula>DATEVALUE( CreatedDate )</formula>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>