force-app/main/default/objects/Gift_Expense_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of Log – Gift or Expense

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <inlineHelpText>Select whether a Gift/Expense Log</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
                <default>true</default>
                <label>Gift</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>