force-app/main/default/objects/Gift_Expense_Log__c/validationRules/GEL_Bank_Contact_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>GEL_Bank_Contact_Required</fullName>
    <active>true</active>
    <description>Case 1051: Gift / Expense Logs : C Reinecke</description>
    <errorConditionFormula>ISBLANK( Bank_Contact_Name__c )</errorConditionFormula>
    <errorDisplayField>Bank_Contact_Name__c</errorDisplayField>
    <errorMessage>You must select a bank contact as receiver / giver of the gift / event invite.</errorMessage>
</ValidationRule>