force-app/main/default/objects/Gift_Expense_Log__c/validationRules/GEL_Charity_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>GEL_Charity_Required</fullName>
    <active>true</active>
    <description>Case 1051: Gift / Expense Logs : C Reinecke</description>
    <errorConditionFormula>ISBLANK( Charity_Name__c )  &amp;&amp;  TEXT(  Rejection_Action__c ) =  &apos;Gift Donated to Charity&apos;</errorConditionFormula>
    <errorDisplayField>Charity_Name__c</errorDisplayField>
    <errorMessage>You must enter the charity name to whom the donation is made.</errorMessage>
</ValidationRule>