force-app/main/default/objects/Gift_Expense_Log__c/validationRules/GEL_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>GEL_Reason_Required</fullName>
    <active>true</active>
    <description>Case 1051: Gift / Expense Logs : C Reinecke</description>
    <errorConditionFormula>ISBLANK(  TEXT(Gift_Expense_Reason__c) )</errorConditionFormula>
    <errorDisplayField>Gift_Expense_Reason__c</errorDisplayField>
    <errorMessage>You must specify a reason for the gift / event invite.</errorMessage>
</ValidationRule>