force-app/main/default/objects/Gift_Expense_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approver__c</columns>
    <columns>Bank_Contact_Name__c</columns>
    <columns>Client_Contact_Name__c</columns>
    <columns>Client_Name__c</columns>
    <columns>Gift_Expense_Value__c</columns>
    <columns>Status__c</columns>
    <columns>Submitted_Date__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>